--- a/src/main/resources/templates/recolte/recolteHausseForm.html
+++ b/src/main/resources/templates/recolte/recolteHausseForm.html
@@ -3,6 +3,7 @@
 <head
 	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 <script th:inline="javascript">
+	const pdsAvSupPdsAp = /*[[#{poidsAvantSupPoidsApres}]]*/ null;
 	$().ready(function() {
 		$.validator.addMethod( "greaterThanEqual", function( value, element, param ) {
 		    var target = $( param );
@@ -15,7 +16,7 @@
 		        } );
 		    }
 		    return parseFloat(value) >= parseFloat(target.val());
-		}, [[#{poidsAvantSupPoidsApres}]] );		
+		}, pdsAvSupPdsAp);		
 		$("#recolteHausseForm").validate({
 			rules : {
 				poidsAvant : {
