--- a/src/main/resources/templates/ruche/ruchesListe.html
+++ b/src/main/resources/templates/ruche/ruchesListe.html
@@ -2,6 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 <script th:inline="javascript">
+	const listeRuches = /*[[#{listeRuches}]]*/ null;
+	const buttTxtPrint = /*[[#{buttontextprint}]]*/ null;
+	const buttTxtCol = /*[[#{buttontextcol}]]*/ null;
+	const urlCommLot = /*[[@{/evenement/ruche/commentaireLot/}]]*/ null;
+	const selectRuTrait = /*[[#{selectruchestraiter}]]*/ null;
 	$(document).ready(function() {
 		const table = new DataTable('#ruches', {
 	    	select: {style: 'multi+shift'},
@@ -9,9 +14,9 @@
 		    buttons: [
 		    	'csv',
 		    	{extend: 'pdf', exportOptions: {columns: ':visible'}, 
-		    		title: [[#{listeRuches}]] + " " + (new Date()).toLocaleDateString()},
-	            {extend: 'print', text: [[#{buttontextprint}]]},
-	            {extend: 'colvis', text: [[#{buttontextcol}]]}
+		    		title: listeRuches + " " + (new Date()).toLocaleDateString()},
+	            {extend: 'print', text: buttTxtPrint},
+	            {extend: 'colvis', text: buttTxtCol}
 	        ]
 	    });
 	    function updateLinks( e, dt, type, indexes ) {
@@ -24,7 +29,7 @@
 	            });
 	            if (noms) { 
 	            	noms = noms.substring(0, noms.length-1);
-	            	$('#commentaire').attr('href', [[@{/evenement/ruche/commentaireLot/}]] + noms);
+	            	$('#commentaire').attr('href', urlCommLot + noms);
 	            } else {
 	            	$('#commentaire').attr('href', "#");
 	            }      
@@ -33,7 +38,7 @@
 	    table.on( 'select deselect', updateLinks);
 	    $('.selection').on('click', function () {
 	    	if ($(this).attr("href") == "#") {
-	    		alert([[#{selectruchestraiter}]]);	
+	    		alert(selectRuTrait);	
 	    	}      
 	    });
 	});
