listes de transhumances pour tous le ruchers, on ignore le dépôt

--- a/src/main/resources/templates/rucher/rucherHisto.html
+++ b/src/main/resources/templates/rucher/rucherHisto.html
@@ -21,7 +21,7 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-					<th:block th:text="#{historique} + ' '"></th:block>
+					<th:block th:text="#{transhumances} + ' '"></th:block>
 					<a th:href="@{'/rucher/'+${rucher.id}}"
 						th:text="#{rucher} + ' ' + ${rucher.nom}"></a>
 				</h1>
