--- a/src/main/resources/templates/rucher/ruchersHisto.html
+++ b/src/main/resources/templates/rucher/ruchersHisto.html
@@ -21,7 +21,7 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-					<th:block th:text="#{historique} + ' '"></th:block>
+					<th:block th:text="#{transhumances}"></th:block>
 				</h1>
 			</div>
 			<div class="col">
