--- a/src/main/resources/templates/rucher/rucherHisto.html
+++ b/src/main/resources/templates/rucher/rucherHisto.html
@@ -49,14 +49,14 @@
 			</thead>
 			<tbody>
 				<tr th:each="hist : ${histo}">
-					<td><a th:text="${hist.get('date')}"
-						th:href="@{'/evenement/'+${hist.get('eveid')}+'?type=ajoutruche'}"></a></td>
-					<td th:text="${hist.get('type')}"></td>
-					<td th:text="${hist.get('destProv')}"></td>
-					<td th:if="${group}" th:text="${hist.get('nbMouv')}"></td>
-					<td th:text="${hist.get('ruche')}"></td>
-					<td th:text="${hist.get('nbruches')}"></td>
-					<td th:text="${hist.get('etat')}"></td>
+					<td><a th:text="${#temporals.format(hist.date, 'yyyy/MM/dd HH:mm')}"
+						th:href="@{'/evenement/'+${hist.eveid}+'?type=ajoutruche'}"></a></td>
+					<td th:text="${hist.type} ? #{Ajout} : #{Retrait}"></td>
+					<td th:text="${hist.destProv}"></td>
+					<td th:if="${group}" th:text="${hist.nbMouv}"></td>
+					<td th:text="${hist.ruche}"></td>
+					<td th:text="${hist.nbruches}"></td>
+					<td th:text="${hist.etat}"></td>
 				</tr>
 		</table>
 	</div>
