--- a/src/main/resources/templates/rucher/ruchersHisto.html
+++ b/src/main/resources/templates/rucher/ruchersHisto.html
@@ -5,8 +5,8 @@
 
 <script th:inline="javascript">
 	$().ready(function() {
-		const url = /*[[@{'/rucher/historiques/'}]]*/ null;
-		$('#groupe').on('change', function () {
+		const url = /*[[@{'/rucher/historiques/'}]]*/null;
+		$('#groupe').on('change', function() {
 			location = url + ($(this).is(':checked'));
 		});
 	});
@@ -25,9 +25,9 @@
 				</h1>
 			</div>
 			<div class="col">
-				<span class="padicons">
-       				<input type="checkbox" id="groupe" th:title="#{grouper}" th:checked="${group}" />
-       				<label for="groupe" th:text="#{grouper}"></label>
+				<span class="padicons"> <input type="checkbox" id="groupe"
+					th:title="#{grouper}" th:checked="${group}" /> <label for="groupe"
+					th:text="#{grouper}"></label>
 				</span>
 			</div>
 		</div>
@@ -40,24 +40,26 @@
 					<th th:text="#{rucher}"></th>
 					<th th:text="#{type}"></th>
 					<th th:text="#{destProv}"></th>
-					<th th:if="${group}" style="background-color: LemonChiffon" th:text="#{nb}"></th>
+					<th th:if="${group}" style="background-color: LemonChiffon"
+						th:text="#{nb}"></th>
 					<th style="background-color: LemonChiffon" th:text="#{ruche}"></th>
-					<th style="background-color:PaleGoldenRod" th:text="#{nb}"></th>
-					<th style="background-color:PaleGoldenRod" th:text="#{etat}"></th>
+					<th style="background-color: PaleGoldenRod" th:text="#{nb}"></th>
+					<th style="background-color: PaleGoldenRod" th:text="#{etat}"></th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr th:each="hist : ${histo}">
-					<td><a th:text="${hist.get('date')}"
-						th:href="@{'/evenement/'+${hist.get('eveid')}+'?type=ajoutruche'}"></a></td>
-					<td><a th:text="${hist.get('rucherNom')}"
-						th:href="@{'/rucher/'+${hist.get('rucherId')}}"></a></td>
-					<td th:text="${hist.get('type')}"></td>
-					<td th:text="${hist.get('destProv')}"></td>
-					<td th:if="${group}" th:text="${hist.get('nbMouv')}"></td>
-					<td th:text="${hist.get('ruche')}"></td>
-					<td th:text="${hist.get('nbruches')}"></td>
-					<td th:text="${hist.get('etat')}"></td>
+					<td><a
+						th:text="${#temporals.format(hist.date, 'yyyy/MM/dd HH:mm')}"
+						th:href="@{'/evenement/'+${hist.eveid}+'?type=ajoutruche'}"></a></td>
+					<td><a th:text="${hist.rucher.nom}"
+						th:href="@{'/rucher/'+${hist.rucher.id}}"></a></td>
+					<td th:text="${hist.type} ? #{Ajout} : #{Retrait}"></td>
+					<td th:text="${hist.destProv}"></td>
+					<td th:if="${group}" th:text="${hist.nbMouv}"></td>
+					<td th:text="${hist.ruche}"></td>
+					<td th:text="${hist.nbruches}"></td>
+					<td th:text="${hist.etat}"></td>
 				</tr>
 		</table>
 	</div>
