--- a/src/main/resources/templates/rucher/rucherHisto.html
+++ b/src/main/resources/templates/rucher/rucherHisto.html
@@ -52,11 +52,11 @@
 					<td><a th:text="${#temporals.format(hist.date, 'yyyy/MM/dd HH:mm')}"
 						th:href="@{'/evenement/'+${hist.eveid}+'?type=ajoutruche'}"></a></td>
 					<td th:text="${hist.type} ? #{Ajout} : #{Retrait}"></td>
-					<td th:text="${hist.destProv}"></td>
-					<td th:if="${group}" th:text="${hist.nbMouv}"></td>
-					<td th:text="${hist.ruche}"></td>
-					<td th:text="${hist.nbruches}"></td>
-					<td th:text="${hist.etat}"></td>
+					<td th:text="${#strings.listJoin(hist.destProv,' ')}"></td>
+					<td th:if="${group}" th:text="${#lists.size(hist.ruche)}"></td>
+					<td th:text="${#strings.listJoin(hist.ruche,' ')}"></td>
+					<td th:text="${#lists.size(hist.etat)}"></td>
+					<td th:text="${#strings.listJoin(hist.etat,' ')}"></td>
 				</tr>
 		</table>
 	</div>
