--- a/src/main/resources/templates/rucher/ruchersHisto.html
+++ b/src/main/resources/templates/rucher/ruchersHisto.html
@@ -54,12 +54,12 @@
 						th:href="@{'/evenement/'+${hist.eveid}+'?type=ajoutruche'}"></a></td>
 					<td><a th:text="${hist.rucher.nom}"
 						th:href="@{'/rucher/'+${hist.rucher.id}}"></a></td>
-					<td th:text="${hist.type} ? #{Ajout} : #{Retrait}"></td>	
+					<td th:text="${hist.type} ? #{Ajout} : #{Retrait}"></td>
 					<td th:text="${#strings.listJoin(hist.destProv,' ')}"></td>
 					<td th:if="${group}" th:text="${#lists.size(hist.ruche)}"></td>
-					<td th:text="${#strings.listJoin(hist.ruche,' ')}"></td>
+					<td th:text="${#strings.listJoin(#lists.sort(hist.ruche),' ')}"></td>
 					<td th:text="${#lists.size(hist.etat)}"></td>
-					<td th:text="${#strings.listJoin(hist.etat,' ')}"></td>
+					<td th:text="${#strings.listJoin(#lists.sort(hist.etat),' ')}"></td>
 				</tr>
 		</table>
 	</div>
