historique -> historique hausses et historique ruche/rucher

--- a/src/main/resources/templates/essaim/essaimDetail.html
+++ b/src/main/resources/templates/essaim/essaimDetail.html
@@ -83,7 +83,7 @@
 						aria-hidden="true"></a>
 				</th:block>
 				&nbsp; <a th:href="@{'/essaim/historique/'+${essaim.id}}"
-					class="bi bi-calendar-check" th:title="#{historique}"
+					class="bi bi-calendar-check" th:title="#{histoRucheRucher}"
 					aria-hidden="true"></a>
 			</div>
 		</div>
