--- a/src/main/resources/templates/essaim/essaimHisto.html
+++ b/src/main/resources/templates/essaim/essaimHisto.html
@@ -12,7 +12,7 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-					<th:block th:text="#{historique} + ' '"></th:block>
+					<th:block th:text="#{histoRucheRucher} + ' '"></th:block>
 					<a th:href="@{'/essaim/'+${essaim.id}}"
 						th:text="#{essaim} + ' ' + ${essaim.nom}"></a>
 				</h1>
