--- a/src/main/resources/templates/ruche/rucheHisto.html
+++ b/src/main/resources/templates/ruche/rucheHisto.html
@@ -11,7 +11,7 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-					<th:block th:text="#{historique} + ' '"></th:block>
+					<th:block th:text="#{histoHausses} + ' '"></th:block>
 					<a th:href="@{'/ruche/'+${ruche.id}}"
 						th:text="#{ruche} + ' ' + ${ruche.nom}"></a>
 				</h1>		
