--- a/src/main/resources/templates/ruche/rucheDetail.html
+++ b/src/main/resources/templates/ruche/rucheDetail.html
@@ -96,7 +96,7 @@ $().ready(function() {
 				  class="bi bi-chat-text" th:title="#{evenementCommentaire}" aria-hidden="true"></a>
 				&nbsp;
 				<a th:href="@{'/ruche/historique/'+${ruche.id}}"
-				  class="bi bi-calendar-check" th:title="#{historique}" aria-hidden="true"></a>
+				  class="bi bi-calendar-check" th:title="#{histoHausses}" aria-hidden="true"></a>
         	</div>
         </div>
     </div>
