--- a/src/main/resources/templates/recolte/recolteDetail.html
+++ b/src/main/resources/templates/recolte/recolteDetail.html
@@ -1,10 +1,11 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
+<head
+	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 
 
 <script th:replace="include :: jsdatetimepicker"></script>
-<link th:replace="include :: cssdatetimepicker"/>
+<link th:replace="include :: cssdatetimepicker" />
 <script th:replace="include :: localejsdatetimepicker"></script>
 <script th:replace="include :: moment"></script>
 
@@ -86,37 +87,42 @@ $(document).ready(function() {
 			<div class="col">
 				<h1 class="item">
 					<a th:href="@{'/recolte/liste'}" th:text="#{recolte}"></a>
-					<th:block th:text="' '+${#temporals.format(recolte.date, 'yyyy/MM/dd HH:mm')}"></th:block>
+					<th:block
+						th:text="' '+${#temporals.format(recolte.date, 'yyyy/MM/dd HH:mm')}"></th:block>
 				</h1>
 			</div>
 			<div class="col">
 				<a th:href="@{'/recolte/modifie/'+${recolte.id}}"
-				  class="bi bi-pencil" th:title="#{modifier}" aria-hidden="true"></a>
-				&nbsp;
-				<a th:href="@{'/recolte/choixHausses/'+${recolte.id}}"
-				  class="bi bi-justify" th:title="#{choixHausesRecolte}" aria-hidden="true"></a>
-				<span id="enlevehausses" class="bi bi-reply-all cursorpointer" th:title="#{recolteHausseDepot}" aria-hidden="true"></span>
-       			<a th:href="@{'/recolte/statistiques/essaim/'+${recolte.id}}"
-       			  class="bi bi-pie-chart" th:title="#{statistiquesessaims}" aria-hidden="true"></a>
-       			<a id="supprime" th:href="@{'/recolte/supprime/'+${recolte.id}}"
-       			  class="confirmationsupprime bi bi-trash" style="color:red" 
-       			  th:title="#{supprimer}" aria-hidden="true"></a>
-       			
-       			<input type="text" id="date" name="date">
-       			<button id="dateOK">Date retrait hausses</button>
-				 
+					class="bi bi-pencil" th:title="#{modifier}" aria-hidden="true"></a>
+				&nbsp; <a th:href="@{'/recolte/choixHausses/'+${recolte.id}}"
+					class="bi bi-justify" th:title="#{choixHausesRecolte}"
+					aria-hidden="true"></a> <span id="enlevehausses"
+					class="bi bi-reply-all cursorpointer"
+					th:title="#{recolteHausseDepot}" aria-hidden="true"></span> <a
+					th:href="@{'/recolte/statistiques/essaim/'+${recolte.id}}"
+					class="bi bi-pie-chart" th:title="#{statistiquesessaims}"
+					aria-hidden="true"></a> <a id="supprime"
+					th:href="@{'/recolte/supprime/'+${recolte.id}}"
+					class="confirmationsupprime bi bi-trash" style="color: red"
+					th:title="#{supprimer}" aria-hidden="true"></a> <input type="text"
+					id="date" name="date">
+				<button id="dateOK">Date retrait hausses</button>
+
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid table-responsive" th:with="pdsMiel=(${nbruches}==0) ? 0.00 : 
+	<div class="container-fluid table-responsive"
+		th:with="pdsMiel=(${nbruches}==0) ? 0.00 : 
 			${#aggregates.sum(detailsRecolte.![poidsAvant])} - ${#aggregates.sum(detailsRecolte.![poidsApres])}">
 		<table class="table table-sm table-bordered">
 			<thead>
 				<tr>
 					<th th:text="#{typeMiel}"></th>
 					<th th:text="#{RucherS}"></th>
-					<th style="background-color:LemonChiffon" th:text="#{poidsMielHausses}"></th>
-					<th style="background-color:LemonChiffon" th:text="#{poidsMielPot}"></th>
+					<th style="background-color: LemonChiffon"
+						th:text="#{poidsMielHausses}"></th>
+					<th style="background-color: LemonChiffon"
+						th:text="#{poidsMielPot}"></th>
 					<th th:text="#{commentaire}"></th>
 					<th th:text="#{Hausses}"></th>
 					<th th:text="#{Ruches}"></th>
@@ -126,36 +132,42 @@ $(document).ready(function() {
 			<tbody>
 				<tr>
 					<td th:text="#{${recolte.typeMiel}}"></td>
-					<td th:text="${rucher}"></td>
+					<td><th:block th:each="idn, iterStat : ${rucher}">
+							<a th:href="@{'/rucher/'+${idn.id}}" th:text="${idn.nom}"></a>
+							<th:block th:text="${iterStat.last} ? '' :'&nbsp;'"></th:block>
+						</th:block></td>
 					<td class="num" th:if="${#lists.isEmpty(detailsRecolte)}">0,00</td>
-					<td class="num" th:unless="${#lists.isEmpty(detailsRecolte)}" 
-					 th:text="${#numbers.formatDecimal(pdsMiel,1,2,'DEFAULT')}"></td>
-					<td class="num" th:text="${#numbers.formatDecimal(recolte.poidsMiel,1,2,'DEFAULT')}"></td>
+					<td class="num" th:unless="${#lists.isEmpty(detailsRecolte)}"
+						th:text="${#numbers.formatDecimal(pdsMiel,1,2,'DEFAULT')}"></td>
+					<td class="num"
+						th:text="${#numbers.formatDecimal(recolte.poidsMiel,1,2,'DEFAULT')}"></td>
 					<td th:text="${recolte.commentaire}"></td>
 					<td th:text="${#arrays.length(detailsRecolte)}"></td>
 					<td th:text="${nbruches}"></td>
-					<td th:text="(${nbruches}==0) ? '' : ${#numbers.formatDecimal(pdsMiel/nbruches,1,3,'DEFAULT')}"></td>
+					<td
+						th:text="(${nbruches}==0) ? '' : ${#numbers.formatDecimal(pdsMiel/nbruches,1,3,'DEFAULT')}"></td>
 				</tr>
 			</tbody>
 		</table>
-
-		<h6 th:text="#{PasDeHausse}" th:if="${#lists.isEmpty(detailsRecolte)}"></h6>	
-		<h6 th:text="#{haussesRecolte}" th:unless="${#lists.isEmpty(detailsRecolte)}"></h6>
-		<table class="table table-sm table-bordered" id="hausses" th:unless="${#lists.isEmpty(detailsRecolte)}">
+		<h6 th:text="#{PasDeHausse}" th:if="${#lists.isEmpty(detailsRecolte)}"></h6>
+		<h6 th:text="#{haussesRecolte}"
+			th:unless="${#lists.isEmpty(detailsRecolte)}"></h6>
+		<table class="table table-sm table-bordered" id="hausses"
+			th:unless="${#lists.isEmpty(detailsRecolte)}">
 			<thead>
 				<tr>
-					<th style="background-color:PaleGoldenRod" th:text="#{hausse}"></th>
-					<th style="background-color:PaleGoldenRod" th:text="#{ruche}"></th>
-					<th style="background-color:PaleGoldenRod" th:text="#{essaim}"></th>
-					<th style="background-color:PaleGoldenRod" th:text="#{rucher}"></th>
-					<th style="background-color:LemonChiffon" th:text="#{poidsMiel}"></th>
-					<th style="background-color:LemonChiffon" th:text="#{poidsAvant}"></th>
-					<th style="background-color:LemonChiffon" th:text="#{poidsApres}"></th>
+					<th style="background-color: PaleGoldenRod" th:text="#{hausse}"></th>
+					<th style="background-color: PaleGoldenRod" th:text="#{ruche}"></th>
+					<th style="background-color: PaleGoldenRod" th:text="#{essaim}"></th>
+					<th style="background-color: PaleGoldenRod" th:text="#{rucher}"></th>
+					<th style="background-color: LemonChiffon" th:text="#{poidsMiel}"></th>
+					<th style="background-color: LemonChiffon" th:text="#{poidsAvant}"></th>
+					<th style="background-color: LemonChiffon" th:text="#{poidsApres}"></th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr th:each="detailRecolte : ${detailsRecolte}">
-					<td><a data-bs-toggle="tooltip" th:title="#{saisirpoids}" 
+					<td><a data-bs-toggle="tooltip" th:title="#{saisirpoids}"
 						th:href="@{'/recolte/modifie/hausse/'+${recolte.id}+'/'+${detailRecolte.id}}"
 						th:text="${detailRecolte.hausse.nom}"></a></td>
 					<td><a th:href="@{'/ruche/'+${detailRecolte.ruche?.id}}"
@@ -164,14 +176,17 @@ $(document).ready(function() {
 						th:text="${detailRecolte.essaim?.nom}"></a></td>
 					<td><a th:href="@{'/rucher/'+${detailRecolte.rucher?.id}}"
 						th:text="${detailRecolte.rucher?.nom}"></a></td>
-					<td class="num" th:text="${#numbers.formatDecimal(detailRecolte.poidsAvant - detailRecolte.poidsApres,1,2,'DEFAULT')}"></td>
-					<td class="num" th:text="${#numbers.formatDecimal(detailRecolte.poidsAvant,1,2,'DEFAULT')}"></td>
-					<td class="num" th:text="${#numbers.formatDecimal(detailRecolte.poidsApres,1,2,'DEFAULT')}"></td>
+					<td class="num"
+						th:text="${#numbers.formatDecimal(detailRecolte.poidsAvant - detailRecolte.poidsApres,1,2,'DEFAULT')}"></td>
+					<td class="num"
+						th:text="${#numbers.formatDecimal(detailRecolte.poidsAvant,1,2,'DEFAULT')}"></td>
+					<td class="num"
+						th:text="${#numbers.formatDecimal(detailRecolte.poidsApres,1,2,'DEFAULT')}"></td>
 				</tr>
 			</tbody>
 		</table>
 	</div>
-	<br/>
+	<br />
 	<footer th:replace="include::footer"></footer>
 </body>
 </html>
