--- a/src/main/resources/templates/recolte/recoltesListe.html
+++ b/src/main/resources/templates/recolte/recoltesListe.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
+<head
+	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 <script th:inline="javascript">
 $(document).ready(function() {
     new DataTable('#recoltes', {
@@ -25,27 +26,28 @@ $(document).ready(function() {
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
-			<h1 class="item" th:text="#{Recoltes}"></h1>
+				<h1 class="item" th:text="#{Recoltes}"></h1>
 			</div>
 			<div class="col">
-				<a id="cree" th:href="@{/recolte/cree}"
-				  class="bi bi-plus-lg" th:title="#{ajouterRecolte}" aria-hidden="true"></a>
-				&nbsp;
-				<a th:href="@{/recolte/statistiques/essaim}"
-				  class="bi bi-table" th:title="#{statistiquesessaims}" aria-hidden="true"></a>
-				<a th:href="@{/recolte/statprod}"
-				  class="bi bi-bar-chart" th:title="#{statistiquesProd}" aria-hidden="true"></a>
-        	</div>
-        </div>
-    </div>
+				<a id="cree" th:href="@{/recolte/cree}" class="bi bi-plus-lg"
+					th:title="#{ajouterRecolte}" aria-hidden="true"></a> &nbsp; <a
+					th:href="@{/recolte/statistiques/essaim}" class="bi bi-table"
+					th:title="#{statistiquesessaims}" aria-hidden="true"></a> <a
+					th:href="@{/recolte/statprod}" class="bi bi-bar-chart"
+					th:title="#{statistiquesProd}" aria-hidden="true"></a>
+			</div>
+		</div>
+	</div>
 	<div class="container-fluid">
-	<table class="table table-bordered table-striped dt-responsive" id="recoltes">			
+		<table class="table table-bordered table-striped dt-responsive"
+			id="recoltes">
 			<thead>
 				<tr>
 					<th th:text="#{date}"></th>
-					<th style="background-color:PaleGoldenRod" th:text="#{RucherS}"></th>
+					<th style="background-color: PaleGoldenRod" th:text="#{RucherS}"></th>
 					<th th:text="#{typeMiel}"></th>
-					<th style="background-color:LemonChiffon" th:text="#{poidsMielPot}"></th>
+					<th style="background-color: LemonChiffon"
+						th:text="#{poidsMielPot}"></th>
 					<th th:text="#{commentaire}"></th>
 				</tr>
 			</thead>
@@ -53,9 +55,14 @@ $(document).ready(function() {
 				<tr th:each="recolte : ${recoltes}">
 					<td><a th:href="@{'/recolte/'+${recolte.id}}"
 						th:text="${#temporals.format(recolte.date, 'yyyy/MM/dd HH:mm')}"></a></td>
-					<td th:text="${ruchers[recolteStat.index]}"></td>
+					<td><th:block
+							th:each="idn, iterStat : ${ruchers[recolteStat.index]}">
+							<a th:href="@{'/rucher/'+${idn.id}}" th:text="${idn.nom}"></a>
+							<th:block th:text="${iterStat.last} ? '' :'&nbsp;'"></th:block>
+						</th:block></td>
 					<td th:text="#{${recolte.typeMiel}}"></td>
-					<td class="num" th:text="${#numbers.formatDecimal(recolte.poidsMiel,1,2,'DEFAULT')}"></td>
+					<td class="num"
+						th:text="${#numbers.formatDecimal(recolte.poidsMiel,1,2,'DEFAULT')}"></td>
 					<td th:text="${recolte.commentaire}"></td>
 				</tr>
 			</tbody>
